force-app/main/default/objects/Incident_Alert__c/Incident_Alert__c.object-meta.xml
<CustomObject>
    <label>Incident Alert</label>
    <nameField>
        <label>Incident Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incident Alerts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>