force-app/main/default/objects/Incident_Alert__c/fields/Incident_Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>Incident_Severity_Level__c</fullName>
    <label>Incident Severity Level</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insignificant</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Significant</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Severe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>