force-app/main/default/objects/Incident_Alert__c/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <label>Incident Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Behaviour Incident</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>CyberSecurity</fullName>
            </value>
            <value>
                <fullName>Damaged Property</fullName>
            </value>
            <value>
                <fullName>Illness</fullName>
            </value>
            <value>
                <fullName>Injury</fullName>
            </value>
            <value>
                <fullName>Medication Error</fullName>
            </value>
            <value>
                <fullName>Near Miss</fullName>
            </value>
            <value>
                <fullName>Non-Compliant</fullName>
            </value>
            <value>
                <fullName>Safeguarding Children</fullName>
            </value>
            <value>
                <fullName>Vehicle Incident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>