force-app/main/default/objects/Incident_Alert__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Contact.Is_Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Incident_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>